# ahs_copilot_demo

./: .dockerignore  .env.example  .gitignore  APPLY_COMPARISON_WORKSPACE.md  Dockerfile  LICENSE  NEXT_CHAT_HANDOFF.md  README.md  RUN_ON_MAC.md  changed_files.txt  docker-compose.aws.yml  docker-compose.yml  pyproject.toml  streamlit_app.py  verification_report.json
.streamlit/: config.toml  secrets.toml.example
ahs_copilot_day3_v0_5_1/: .gitignore  CHANGELOG.md  NEXT_CHAT_HANDOFF.md  README.md  REPOSITORY_MANIFEST.txt  pyproject.toml
ahs_copilot_day3_v0_5_1/config/: ahs_engine.example.toml
ahs_copilot_day3_v0_5_1/docs/: MIGRATION_v0.5.0_to_v0.5.1.md  RUN_ON_MAC.md  architecture.md  decisions.md  execution_report.md
ahs_copilot_day3_v0_5_1/examples/: analysis_plan_high_burden_by_tenure.json  household_filter.json  household_with_mortgage_aggregation.json  household_with_project_aggregation.json  survey_tenure_comparison.json
ahs_copilot_day3_v0_5_1/metadata/: execution_catalog.json  semantic_catalog.json  source_files.json
ahs_copilot_day3_v0_5_1/schemas/: analysis_plan.schema.json  dataset_schema.schema.json  execution_catalog.schema.json  query_result.schema.json  query_spec.schema.json  semantic_catalog.schema.json  source_file.schema.json  survey_estimate_request.schema.json  survey_estimate_result.schema.json  validated_analysis_plan.schema.json
ahs_copilot_day3_v0_5_1/scripts/: verify.sh
ahs_copilot_day3_v0_5_1/src/ahs_copilot/analysis_plan/: __init__.py  cli.py  contracts.py  service.py
ahs_copilot_day3_v0_5_1/src/ahs_copilot/metadata/: models.py
ahs_copilot_day3_v0_5_1/src/ahs_copilot/query_engine/: __init__.py  catalog.py  cli.py  config.py  contracts.py  engine.py  errors.py
ahs_copilot_day3_v0_5_1/src/ahs_copilot/survey_estimation/: __init__.py  contracts.py  service.py
ahs_copilot_day3_v0_5_1/tests/: conftest.py  test_analysis_plan.py  test_metadata_model.py  test_query_engine.py  test_schema_inspection.py  test_survey_estimation.py
ahs_copilot_day3_v0_5_1/tests/fixtures/synthetic/: household.csv  mortgage.csv  projects.csv
config/: ahs_engine.example.toml  ahs_engine.toml  docker.production.toml  docker.sample.toml
docs/: agent_workflow.md  analysis_plan.md  evaluation_harness.md  execution_report.md  final_repository_audit.md  red_team_guardrails.md  streamlit_app.md  survey_estimation.md
evaluation/: ahs_eval_50.json  example_refusal_eval.json  red_team_cases.json  (+3 more)
(+100 files in other folders)
