[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahs-copilot"
version = "0.9.0"
description = "Governed DuckDB query engine and Streamlit interface for the 2023 American Housing Survey PUF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1,<2",
  "pydantic>=2.10,<3",
  "langgraph>=1.2,<2",
  "langchain-core>=1.2,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
ui = [
  "streamlit>=1.59,<2",
  "pandas>=2.2,<3.1",
  "altair>=6,<7",
]
model-openai = ["langchain-openai>=1.3,<2"]
model-anthropic = ["langchain-anthropic>=1.4,<2"]
model-bedrock = ["langchain-aws>=1.6,<2"]

[project.scripts]
ahs-query = "ahs_copilot.query_engine.cli:main"
ahs-plan = "ahs_copilot.analysis_plan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
