[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahs-copilot"
version = "0.5.1"
description = "Governed DuckDB execution and descriptive survey-estimation core for the 2023 AHS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1,<2",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
ahs-query = "ahs_copilot.query_engine.cli:main"
ahs-plan = "ahs_copilot.analysis_plan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
